# tomoro.ai

./: .coverage  .flake8  .gitignore  Makefile  README.md  README_install.md  pyproject.toml  uwsgi.ini
src/data/processed/: lookup_finetune_test.json  lookup_qa.json
src/main/: api.py  evaluate.py  logger.py  predict.py  preprocess.py  train.py
src/main/config/: config.py  config.yml
src/output/evaluation_results/: evaluation_detailed_20250514_112956.json  evaluation_summary_20250514_112956.json
src/output/fin_qa_model/: model.safetensors
src/test/: test_api.py  test_predict.py  test_preprocess.py
